--- a/index.html
+++ b/index.html
@@ -8,28 +8,46 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <body>
-    <div class="nav">
-        <div class="logo">
-             <h1>GRADIENT</h1>
+    <header>
+            <div class="nav-head">
+              <h2>GRADIENT</h2>
+            </div>
+            <nav>
+                <ul class="nav__links">
+                    <li><a href="#home"><button class="bn29">HOME</button></a></li>
+                    <li><a href="#explore"><button class="bn29">EXPLORE</button></a></li>
+                    <li><a href="#services"><button class="bn29">SERVICES</button></a></li>
+                    <li><a href="#protfolio"><button class="bn29">PROTFOLIO</button></a></li>
+                    <li><a href="#team"><button class="bn29">OUR TEAM</button></a></li>
+                    <li><a href="#testimonials"><button class="bn29">TESTIMONIALS</button></a></li>
+                    <button class="button"><span>Contact Us</span></button>
+                </ul>
+            </nav>
+            <a onclick="openNav()" class="menu" href="#"><div class="toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div></a>
+        </header>
+        <div id="mobile__menu" class="overlay">
+            <a class="close" onclick="closeNav()">&times;</a>
+            <div class="overlay__content">
+                 <a onclick="closeNav()" href="#home"class="bn29">HOME</a>
+                 <br>
+                 <a onclick="closeNav()" href="#explore"class="bn29">EXPLORE</a>
+                 <br>
+                 <a onclick="closeNav()" href="#services"class="bn29">SERVICES</a>
+                 <br>
+                 <a onclick="closeNav()" href="#protfolio"class="bn29">PROTFOLIO</a>
+                 <br>
+                 <a onclick="closeNav()" href="#team"class="bn29">OUR TEAM</a>
+                 <br>
+                 <a onclick="closeNav()" href="#testimonials"class="bn29">TESTIMONIALS</a>
+                 <br>
+<br>
+                <button class="button"><span>Contact Us</span></button>
+            </div>
         </div>
-        <div class="clear-menu-btn mobile">
-              <input type="checkbox">
-              <span class="top"></span>
-              <span class="middle"></span>
-              <span class="bottom"></span>
-              <span class="circle"></span>
-        </div>
-        <ul class='navbar'>
-          <li><a href="#home"><button class="bn29">HOME</button></a></li>
-          <li><a href="#explore"><button class="bn29">EXPLORE</button></a></li>
-          <li><a href="#services"><button class="bn29">SERVICES</button></a></li>
-          <li><a href="#protfolio"><button class="bn29">PROTFOLIO</button></a></li>
-          <li><a href="#team"><button class="bn29">OUR TEAM</button></a></li>
-          <li><a href="#testimonials"><button class="bn29">TESTIMONIALS</button></a></li>
-          <button class="button"><span>Contact Us</span></button>
-        </ul>
-
-    </div>
     <div id="home" class="intro" data-aos="fade-up">
       <div class="head"><h1>Hi, We are from Gradient</h1></div>
     <div class="intro-info" data-aos="fade-up">
@@ -304,7 +322,7 @@ Ipsum has been the industry's standard</p>
       <br><br>
       <div class="testimonials-corousel" data-aos="fade-up">
         <div class="left-arrow">
-          <img style="transform: rotate(180deg); "src="Images/rightArrow.png" alt="">
+          <img style="transform: rotate(180deg); cursor: pointer;"src="Images/rightArrow.png" alt="">
         </div>
         <div class="cardbody">
           <div class="tcard disable">
@@ -339,7 +357,7 @@ Ipsum has been the industry's standard</p>
 
         </div>
         <div class="right-arrow">
-          <img src="Images/rightArrow.png" alt="">
+          <img  style=" cursor: pointer;"src="Images/rightArrow.png" alt="">
         </div>
         </div>
 
@@ -423,9 +441,34 @@ Ipsum has been the industry's standard</p>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
-      offset: 400,
-      duration: 1000
+      offset: 0,
+      duration: 600
     });
+    function openNav() {
+    document.getElementById("mobile__menu").style.width = "100%";
+}
+
+function closeNav() {
+    document.getElementById("mobile__menu").style.width = "0";
+}
+const cards = document.querySelectorAll('.tcard')
+const right = document.querySelector('.right-arrow')
+cards.forEach((panel) => {
+    right.addEventListener('click',() => {
+        removeActiveclasses()
+        panel.classList.add('active')
+        panel.classList.remove('disable')
+
+
+    })
+
+})
+function removeActiveclasses() {
+  panels.forEach(panel => {
+    panel.classList.remove('active')
+
+  })
+}
 
   </script>
   </body>
