--- a/index.html
+++ b/index.html
@@ -305,12 +305,37 @@
     </div>
     <br>
     <div class="protfolio-images">
-      <img data-aos="fade-up" src="Images/about us.jpg" alt="">
-      <img data-aos="fade-up" src="Images/about us.jpg" alt="">
-      <img data-aos="fade-up" src="Images/about us.jpg" alt="">
-      <img data-aos="fade-up" src="Images/about us.jpg" alt="">
-      <img data-aos="fade-up" src="Images/about us.jpg" alt="">
-      <img data-aos="fade-up" src="Images/about us.jpg" alt="">
+
+      <div class="container">
+        <img src="Images/frontend.jpg" alt="Avatar" class="image">
+        <div class="middle">
+          <div class="text">John Doe</div>
+      </div>
+    </div>
+      <div class="container">
+        <img src="Images/frontend.jpg" alt="Avatar" class="image">
+        <div class="middle">
+          <div class="text">John Doe</div>
+      </div>
+      </div>
+      <div class="container">
+        <img src="Images/frontend.jpg" alt="Avatar" class="image">
+        <div class="middle">
+          <div class="text">John Doe</div>
+      </div>
+      </div>
+      <div class="container">
+        <img src="Images/frontend.jpg" alt="Avatar" class="image">
+        <div class="middle">
+          <div class="text">John Doe</div>
+      </div>
+      </div>
+      <div class="container">
+        <img src="Images/frontend.jpg" alt="Avatar" class="image">
+        <div class="middle">
+          <div class="text">John Doe</div>
+      </div>
+      </div>
 
     </div>
   </div>
@@ -439,6 +464,14 @@
         <!-- <img  style=" cursor: pointer;"src="Images/rightArrow.png" alt=""> -->
       </div>
     </div>
+        <br>
+<!-- The dots/circles -->
+<div class="dots" style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+</div>
 
   </div>
   </div>
