--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Gradient</title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Media Queries</title>
 <link rel="stylesheet" href="home.css">
+
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
+
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
+</head>
 <body>
   <!-- header contains Brand name and nav elements of desktop version -->
   <header>
@@ -57,11 +63,11 @@
   </div>
 
   <!-- Here the main body starts where all the sections are divided into several divs: intro, research,MarketAnalysis,working,so on... -->
-  <div id="home" class="intro section" data-aos="fade-up">
+  <div id="home" class="intro section">
     <div class="head">
       <h1>Hi, We are from Gradient</h1>
     </div>
-    <div class="intro-info" data-aos="fade-up">
+    <div class="intro-info">
       <p>Pellentesque habitant morbi tristique senectus et netus et malesuada
         fames ac turpis egestas. Ut arcu libero, pulvinar non massa sed,
         accumsan scelerisque dui. Morbi purus mauris, vulputate quis felis nec, </p>
@@ -76,91 +82,91 @@
 
   <!-- research div  -->
   <div id="research" class="research section">
-    <div class="head mobile" data-aos="fade-up">
+    <div class="head mobile">
       <h1>Research</h1>
     </div>
 
-    <img data-aos="fade-up" src="Images/research.svg" alt="reaserch-img">
+    <img src="Images/research.svg" alt="reaserch-img">
 
     <div class="matter">
 
-      <div class="head desktop" data-aos="fade-left">
+      <div class="head desktop">
         <h1>Research</h1>
       </div>
 
-      <p data-aos="fade-up">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
         Ipsum has been the industry's standard dummy text ever since the </p>
     </div>
   </div>
 
   <!-- MarketAnalysis div  -->
   <div id="Market-analysis" class="Market-analysis">
-    <div class="head mobile" data-aos="fade-up">
+    <div class="head mobile">
       <h1>Market Analysis</h1>
     </div>
-    <img class="mobile" data-aos="fade-up" src="Images/market analysis.svg" alt="MarketAnalysis-img">
+    <img class="mobile" src="Images/market analysis.svg" alt="MarketAnalysis-img">
 
 
     <div class="matter">
-      <div class="head desktop" data-aos="fade-right">
+      <div class="head desktop">
         <h1>Market Analysis</h1>
       </div>
 
-      <p data-aos="fade-up">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
         Ipsum has been the industry's standard dummy text ever since thes</p>
 
     </div>
 
 
-    <img class="desktop" data-aos="fade-up" src="Images/market analysis.svg" alt="MarketAnalysis-img">
+    <img class="desktop" src="Images/market analysis.svg" alt="MarketAnalysis-img">
 
   </div>
 
   <!-- working div  -->
   <div id="working" class="working">
-    <div class="head" data-aos="fade-up">
+    <div class="head">
       <h1>How Does It Works</h1>
     </div>
     <br>
-    <div class="info" data-aos="fade-up">
+    <div class="info">
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
         Ipsum has been the industry's standard dummy text ever since the 1500s</p>
     </div>
     <br>
-    <div class="workinfo-mobile mobile" data-aos="fade-up">
+    <div class="workinfo-mobile mobile">
 
       <div class="sub">
-        <div class="one1" data-aos="fade-up">
+        <div class="one1">
           <h2>Concept</h2>
         </div>
       </div>
       <div class="sub">
-        <div class="two2" data-aos="fade-up">
+        <div class="two2">
           <h2>Budget</h2>
         </div>
 
       </div>
       <div class="sub">
-        <div class="three3" data-aos="fade-up">
+        <div class="three3">
           <h2>Demonstrate</h2>
         </div>
 
       </div>
       <div class="sub">
-        <div class="four4" data-aos="fade-up">
+        <div class="four4">
           <h2>Development</h2>
         </div>
 
       </div>
       <div class="sub">
-        <div class="five5" data-aos="fade-up">
+        <div class="five5">
           <h2>Launch</h2>
         </div>
 
       </div>
     </div>
-    <div class="workinfo desktop" data-aos="fade-up">
-      <div class="subinfo" data-aos="fade-up">
+    <div class="workinfo desktop">
+      <div class="subinfo">
         <div class="one">
           <h2>Concept</h2>
         </div>
@@ -170,7 +176,7 @@
             printing and typesetting</p>
         </div>
       </div>
-      <div class="subinfo" data-aos="fade-up">
+      <div class="subinfo">
         <div class="two">
           <h2>Demonstrate</h2>
         </div>
@@ -180,7 +186,7 @@
             printing and typesetting</p>
         </div>
       </div>
-      <div class="subinfo" data-aos="fade-up">
+      <div class="subinfo">
         <div class="three">
           <h2>Budget</h2>
         </div>
@@ -190,7 +196,7 @@
             printing and typesetting</p>
         </div>
       </div>
-      <div class="subinfo" data-aos="fade-up">
+      <div class="subinfo">
         <div class="four">
           <h2>Development</h2>
         </div>
@@ -200,7 +206,7 @@
             printing and typesetting</p>
         </div>
       </div>
-      <div class="subinfo" data-aos="fade-up">
+      <div class="subinfo">
         <div class="five">
           <h2>Launch</h2>
         </div>
@@ -215,7 +221,7 @@
   </div>
 
   <!-- services div having cards  -->
-  <div id="services" class="services section" data-aos="fade-up">
+  <div id="services" class="services section">
 
     <div class="head">
       <h1>Our Services</h1>
@@ -228,7 +234,7 @@
     <!-- in cardbody there are different elements of cards with the class column which can be modified individually -->
     <div class="cardbody">
       <div class="row">
-        <div class="column" data-aos="fade-up">
+        <div class="column">
           <div class="card">
             <div class="card-img">
               <img src="Images/team.jpg" alt="">
@@ -245,7 +251,7 @@
           </div>
         </div>
 
-        <div class="column" data-aos="fade-up">
+        <div class="column">
           <div class="card">
             <div class="card-img">
               <img src="Images/frontend.jpg" alt="">
@@ -263,7 +269,7 @@
           </div>
         </div>
 
-        <div class="column" data-aos="fade-up">
+        <div class="column">
           <div class="card">
             <div class="card-img">
               <img src="Images/htmlimg.jpg" alt="">
@@ -285,7 +291,7 @@
   </div>
 
   <!-- PROTFOLIO  div  -->
-  <div id="protfolio" class="protfolio section" data-aos="fade-up">
+  <div id="protfolio" class="protfolio section">
     <div class="head">
       <h1>Our Portfolio</h1>
     </div>
@@ -296,7 +302,7 @@
     </div>
     <br>
     <div class="protfolio-tabs">
-      <ul class='tabs' data-aos="fade-up">
+      <ul class='tabs'>
         <li><a><button onclick="active(1)" class="tbtn active">ALL</button></a></li>
         <li><a><button onclick="active(2)" class="tbtn">UI Design</button></a></li>
         <li><a><button onclick="active(3)" class="tbtn">Graphic Design</button></a></li>
@@ -309,31 +315,42 @@
       <div class="container">
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
+
           <div class="text">John Doe</div>
+      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a>Click Here</a></button>
+
       </div>
     </div>
       <div class="container">
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
-          <div class="text">John Doe</div>
+                    <div class="text">John Doe</div>
+      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a>Click Here</a></button>
+
       </div>
       </div>
       <div class="container">
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
           <div class="text">John Doe</div>
+      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a>Click Here</a></button>
+
       </div>
       </div>
       <div class="container">
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
           <div class="text">John Doe</div>
+      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a>Click Here</a></button>
+
       </div>
       </div>
       <div class="container">
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
           <div class="text">John Doe</div>
+      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a>Click Here</a></button>
+
       </div>
       </div>
 
@@ -341,7 +358,7 @@
   </div>
 
   <!-- team div having fixed images hieght and width as cards in services div  -->
-  <div id="team" class="team section" data-aos="fade-up">
+  <div id="team" class="team section">
     <div class="head">
       <h1>Our Team</h1>
     </div>
@@ -354,7 +371,7 @@
     <div class="team-cards">
       <div class="cardbody">
         <div class="row">
-          <div class="column" data-aos="fade-up">
+          <div class="column">
             <div class="card">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
@@ -368,7 +385,7 @@
             </div>
           </div>
 
-          <div class="column" data-aos="fade-up">
+          <div class="column">
             <div class="card">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
@@ -384,7 +401,7 @@
             </div>
           </div>
 
-          <div class="column" data-aos="fade-up">
+          <div class="column">
             <div class="card">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
@@ -402,7 +419,7 @@
   </div>
 
   <!-- testimonials div and we can add as many as testimonials we need  -->
-  <div id="testimonials" class="testimonials section" data-aos="fade-up">
+  <div id="testimonials" class="testimonials section">
     <div class="head">
       <h1>Testimonials</h1>
     </div>
@@ -411,7 +428,7 @@
       <p>Lorem Ipsum is simply dummy text of the 1500s, when an</p>
     </div>
     <br><br>
-    <div class="testimonials-corousel" data-aos="fade-up">
+    <div class="testimonials-corousel">
       <div class="left-arrow">
         <div> <a class="prev" onclick="plusSlides(-1)">&#10094;</a> </div>
 
@@ -436,7 +453,7 @@
 
           </div>
         </div>
-        <div class="tcard fade">
+        <div class="tcard fade active">
           <div class="testimonial-img">
             <img src="Images/person.jpg" alt="">
           </div>
@@ -447,7 +464,7 @@
         </div>
 
 
-        <div class="tcard fade">
+        <div class="tcard fade ">
           <div class="testimonial-img">
             <img src="Images/person" alt="">
           </div>
@@ -467,7 +484,7 @@
         <br>
 <!-- The dots/circles -->
 <div class="dots" style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot " onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
   <span class="dot" onclick="currentSlide(4)"></span>
@@ -553,5 +570,4 @@
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script src="home.js"></script>
 </body>
-
 </html>
