final without animations

--- a/index.html
+++ b/index.html
@@ -365,8 +365,7 @@
     <br>
     <div class="our-info">
       <p>Lorem Ipsum is simply dummy text of the printing and </p>
-
-    </div>
+</div>
     <br><br>
     <div class="team-cards">
       <div class="cardbody">
@@ -380,7 +379,12 @@
                 <h1>Sai Abhilash</h1>
               </div>
               <p>Graphic Designer</p>
-              <br><br><br>
+              <br><br>
+              <div style="display: flex; justify-content: center; align-items: center;" class="">
+
+              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 0.5rem;" src="Images/instagram.jpg" alt="">
+              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedIn.jpg" alt="">
+            </div>
 
             </div>
           </div>
@@ -395,7 +399,12 @@
                 <h1>Sai Abhilash</h1>
               </div>
               <p>Graphic Designer</p>
-              <br><br><br>
+              <br><br>
+              <div style="display: flex; justify-content: center; align-items: center;" class="">
+
+              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 0.5rem;" src="Images/instagram.jpg" alt="">
+              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedIn.jpg" alt="">
+            </div>
 
 
             </div>
@@ -410,7 +419,12 @@
                 <h1>Sai Abhilash</h1>
               </div>
               <p>Graphic Designer</p>
-              <br><br><br>
+              <br><br>
+              <div style="display: flex; justify-content: center; align-items: center;" class="">
+
+              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 0.5rem;" src="Images/instagram.jpg" alt="">
+              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedIn.jpg" alt="">
+            </div>
             </div>
           </div>
         </div>
@@ -567,7 +581,6 @@
       <p>Designed By Gradient</p>
     </div>
   </footer>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script src="home.js"></script>
 </body>
 </html>
