--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Media Queries</title>
+    <title>Gradient</title>
 <link rel="stylesheet" href="home.css">
 
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -30,7 +30,7 @@
         <li class="liprotfolio"><a href="#protfolio"><button class="bn29">PROTFOLIO</button></a></li>
         <li class="liteam"><a href="#team"><button class="bn29">OUR TEAM</button></a></li>
         <li class="litestimonials"><a href="#testimonials"><button class="bn29">TESTIMONIALS</button></a></li>
-        <button class="button"><span>Contact Us</span></button>
+        <button class="button"><span style="color: white;" >Contact Us</span></button>
       </ul>
     </nav>
     <a onclick="openNav()" class="menu" href="#">
@@ -58,7 +58,7 @@
       <a onclick="closeNav()" href="#testimonials" class="bn29">TESTIMONIALS</a>
       <br>
       <br>
-      <button class="button"><span>Contact Us</span></button>
+      <button class="button"><span style="color:white;">Contact Us</span></button>
     </div>
   </div>
 
@@ -317,7 +317,7 @@
         <div class="middle">
 
           <div class="text">John Doe</div>
-      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a>Click Here</a></button>
+      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a style="color: white;" >Click Here</a></button>
 
       </div>
     </div>
@@ -325,7 +325,7 @@
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
                     <div class="text">John Doe</div>
-      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a>Click Here</a></button>
+      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a style="color: white;" >Click Here</a></button>
 
       </div>
       </div>
@@ -333,7 +333,7 @@
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
           <div class="text">John Doe</div>
-      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a>Click Here</a></button>
+      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a style="color: white;" >Click Here</a></button>
 
       </div>
       </div>
@@ -341,7 +341,7 @@
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
           <div class="text">John Doe</div>
-      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a>Click Here</a></button>
+      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a style="color: white;" >Click Here</a></button>
 
       </div>
       </div>
@@ -349,7 +349,7 @@
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
           <div class="text">John Doe</div>
-      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a>Click Here</a></button>
+      <button type="button" class="bn" style="padding: 1rem; border-radius: 1rem; background-color:#000;"><a style="color: white;" >Click Here</a></button>
 
       </div>
       </div>
@@ -379,11 +379,13 @@
                 <h1>Sai Abhilash</h1>
               </div>
               <p>Graphic Designer</p>
-              <br><br>
+              <br>
               <div style="display: flex; justify-content: center; align-items: center;" class="">
 
-              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 0.5rem;" src="Images/instagram.jpg" alt="">
-              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedIn.jpg" alt="">
+              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 1rem;" src="Images/instagram-brands.svg" alt="">
+              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedin-in-brands.svg" alt="">
+              <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
+              
             </div>
 
             </div>
@@ -399,11 +401,13 @@
                 <h1>Sai Abhilash</h1>
               </div>
               <p>Graphic Designer</p>
-              <br><br>
+              <br>
               <div style="display: flex; justify-content: center; align-items: center;" class="">
 
-              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 0.5rem;" src="Images/instagram.jpg" alt="">
-              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedIn.jpg" alt="">
+              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 1rem;" src="Images/instagram-brands.svg" alt="">
+              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedin-in-brands.svg" alt="">
+              <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
+              
             </div>
 
 
@@ -419,11 +423,12 @@
                 <h1>Sai Abhilash</h1>
               </div>
               <p>Graphic Designer</p>
-              <br><br>
+              <br>
               <div style="display: flex; justify-content: center; align-items: center;" class="">
 
-              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 0.5rem;" src="Images/instagram.jpg" alt="">
-              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedIn.jpg" alt="">
+              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 1rem;" src="Images/instagram-brands.svg" alt="">
+              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedin-in-brands.svg" alt="">
+              <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
             </div>
             </div>
           </div>
@@ -510,31 +515,31 @@
   <br>
   <br>
   <br>
-  <div class="end">
-    <div class="address">
+  <div  class="end">
+    <div class="address" >
       <div class="header">
-        <h2>Address</h2>
+        <h2 style="color: white;">Address</h2>
       </div>
       <br>
       <div class="endpara">
-        <p>A108 Adam Street</p>
-        <p>New York, NY 535022</p>
-        <p>United States</p>
+        <p style="color: white;" >A108 Adam Street</p>
+        <p style="color: white;" >New York, NY 535022</p>
+        <p style="color: white;" >United States</p>
       </div>
       <br>
 
       <div class="phone">
         <div class="para">
-          <h3>Phone:</h3>
+          <h3 style="color: white;" >Phone:</h3>
         </div>
-        <p>+919999999999</p>
+        <p style="color: white;" >+919999999999</p>
 
       </div>
       <div class="mail">
         <div class="para">
-          <h3>Email: </h3>
+          <h3 style="color: white;" >Email: </h3>
         </div>
-        <p>Example@gmail.com</p>
+        <p style="color: white;" >Example@gmail.com</p>
       </div>
     </div>
     <br class="mobile">
@@ -542,7 +547,7 @@
 
     <div class="links">
       <div class="header">
-        <h2>Useful Links</h2>
+        <h2 style="color: white;" >Useful Links</h2>
       </div>
       <br>
       <div class="">
@@ -561,7 +566,7 @@
 
     <div class="end-services">
       <div class="header">
-        <h2>Our Services</h2>
+        <h2 style="color: white;" >Our Services</h2>
       </div>
       <br>
       <div class="">
@@ -577,10 +582,12 @@
   </div>
   <footer>
     <div class="copyright">
-      <p>Copyright @ 2021</p>
-      <p>Designed By Gradient</p>
+      <p style="color:white;">Copyright @ 2021</p>
+      <p style="color:white;">Designed By Gradient</p>
     </div>
   </footer>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
   <script src="home.js"></script>
 </body>
 </html>
